hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tapply_class.php.exp
File "tapply_class.php", line 13, characters 10-11:
Invalid return type (Typing[4110])
File "tapply_class.php", line 12, characters 30-35:
Expected E<int>
File "tapply_class.php", line 12, characters 17-23:
But got dynamic
